finish login flow, subscription experiment, change to use localstorage

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,7 +12,7 @@
   @import "./opacity.scss";
   @import "./position.scss";
   @import "./shape.scss";
-  @import "./width.scss";
+  @import "./width-height.scss";
   @import "./effect.scss";
   @import "./swiper.scss";
   // @import "./toastify.scss";
