--- a/src/styles/_color.scss
+++ b/src/styles/_color.scss
@@ -10,7 +10,8 @@ $colors: (
 	grey-8: $grey-8,
 	grey-7: $grey-7,
 	green: $green,
-	light-green: $light-green,
+  light-green: $light-green,
+  pale-green: $pale-green,
 	dark-green: $dark-green,
 	yellow: $yellow,
 	light-yellow: $light-yellow,
