--- a/src/layout/app/index.module.scss
+++ b/src/layout/app/index.module.scss
@@ -11,10 +11,11 @@
 }
 
 .mainContainer{
-  width: 960px;
-  height: 540px;
+  @include desktop {
+    min-width: 1280px;
+    height: 720px;
+  }
   background-color: $white;
-  @extend .max-width-80vw;
   @extend .max-height-80vh;
   @extend .border-radius;
   @extend .shadow;
