--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -58,26 +58,30 @@
       letter-spacing: -0.06em;
     }
   }
-  .btn-yellow {
-    @extend .bg-yellow;
+  .btn-pale-green {
+    font-weight: 700;
+    @extend .bg-pale-green;
     @extend .border-radius-sm;
     @extend .p1;
-    @extend .px-4;
+    @extend .px-2;
+    @extend .span;
     @extend .text-middle;
+    @extend .light-green;
     @extend .span;
     @extend .border;
-    @extend .border-yellow;
+    @extend .border-pale-green;
     &.fullwidth { width:100%; }
     &[disabled] {
-      @extend .bg-grey-d;
-      @extend .border-grey-d;
+      @extend .bg-grey-a;
+      @extend .border-grey-a;
+      @extend .grey-f;
     }
   }
   .btn-grey {
     @extend .bg-grey-d;
     @extend .border-radius-sm;
     @extend .p1;
-    @extend .px-4;
+    @extend .px-2;
     @extend .span;
     @extend .border;
     @extend .border-grey-d;
@@ -91,7 +95,7 @@
     @extend .white;
     @extend .border-radius-sm;
     @extend .p1;
-    @extend .px-4;
+    @extend .px-2;
     @extend .span;
     @extend .border;
     @extend .border-red;
@@ -106,7 +110,7 @@
     @extend .white;
     @extend .border-radius-sm;
     @extend .p1;
-    @extend .px-4;
+    @extend .px-2;
     @extend .border;
     @extend .border-black;
     @extend .span;
