--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,7 @@ $margin: 5px;
 
 $square-width: 20px; 
 
-$radius: 14px;
+$radius: 16px;
 $radius-sm: 8px;
 
 $main-max-width: 1650px;
@@ -15,7 +15,7 @@ $main-max-width: 1650px;
 $transparent: transparent;
 $white: #fff;
 $black: #111;
-$grey-f: #F9f9f9;
+$grey-f: #EDF0F5;
 $grey-d: #D9D9D9;
 $grey-e: #E0E0E0;
 $grey-b: #BCBBBB;
@@ -23,7 +23,8 @@ $grey-a: #AFAFAF;
 $grey-8: #8B8B8B;
 $grey-7: #707070;
 $green: #24723F;
-$light-green: #39A319;
+$pale-green: #D5E9E8;
+$light-green: #318273;
 $dark-green: #03331F;
 $yellow: #FFD663;
 $red: #e74c3c;
