--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -18,7 +18,8 @@
   // @import "./toastify.scss";
   @import "./nprogress.scss";
   @import "./wysiwyg.scss";
-
+  @import "./tool-tip.scss";
+  
   body, html, #__next {
     min-height: 100vh;
     max-width: 100vw;
