--- a/src/styles/_border.scss
+++ b/src/styles/_border.scss
@@ -22,6 +22,9 @@
 .border-radius-sm {
 		border-radius: $radius-sm;
 }
+.border-radius-l {
+    border-radius: $radius-l;
+}
 .border-circle {
 	border-radius: 50px;
 }
