--- a/src/layout/mainLayout.scss
+++ b/src/layout/mainLayout.scss
@@ -5,17 +5,19 @@
   -ms-overflow-style: none;
   height: 100vh;
   background-color: #abe6e3;
+  padding: 20px;
   @extend .flex-column;
   @extend .flex-x-center;
   @extend .flex-y-center;
+  @extend .overflow-scroll;
 }
 
 .mainContainer{
-  max-width: 1440px;
-  height: 1100px;
-  width: 90vw;
+  min-width: 725px;
+  min-height: 400px;
+  max-width: 1450px;
+  max-height:800px;
   background-color: $white;
-  @extend .max-height-80vh;
   @extend .border-radius;
   @extend .shadow;
   @extend .px-3;
