--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -72,7 +72,7 @@
     @extend .border;
     @extend .border-pale-green;
     &.fullwidth { width:100%; }
-    &[disabled] {
+    &[disabled], &.disabled {
       @extend .bg-grey-a;
       @extend .border-grey-a;
       @extend .grey-f;
