--- a/src/styles/_width-height.scss
+++ b/src/styles/_width-height.scss
@@ -50,17 +50,13 @@
 			min-width:$i * 5vw;
 		}
 
-		.min-width-#{$i * 5}px {
+		.min-width-#{$i * 5} {
 			min-width:$i * 5px;
     }
 
     .min-width-#{$i * 5}p {
 			min-width:0% + $i * 5;
 		}
-
-    .min-width-#{$i * 5}p {
-      min-width:0% + $i * 5;
-    }
 }
 @for $i from 0 through 500 {
 		.height-#{$i * 5}p {
@@ -78,6 +74,10 @@
 		.max-height-#{$i * 5}vh {
 			max-height: $i * 5vh;
     }
+
+    .max-height-#{$i * 5} {
+			max-height: $i * 5px;
+    }
     
     .min-height-#{$i * 5}p {
       min-height:0% + $i * 5;
@@ -87,7 +87,7 @@
 			min-height:$i * 5vh;
 		}
 
-		.min-height-#{$i * 5}px {
+		.min-height-#{$i * 5} {
 			min-height:$i * 5px;
     }
 
