feature: resume session

--- a/src/pages/landing/index.module.scss
+++ b/src/pages/landing/index.module.scss
@@ -11,6 +11,7 @@
 .tile {
   @extend .text-center;
   @extend .pointer;
+  @extend .btn-pale-green;
   @extend .border-radius;
   @extend .border;
   @extend .width-200;
